--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,5 @@ project(Remote_Memory)
 
 set(CMAKE_CXX_STANDARD 11)
 
-set(SOURCE_FILES main.cpp server.cpp Structures/linkedList.h Structures/linkedList.cpp Structures/node.cpp Structures/node.h)
+set(SOURCE_FILES main.cpp server.cpp Structures/LinkedList.h Structures/LinkedList.cpp Structures/Node.cpp Structures/Node.h Servers/Server.cpp Servers/Server.h)
 add_executable(Remote_Memory ${SOURCE_FILES})
