--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,9 @@
 cmake_minimum_required(VERSION 3.8)
 project(Remote_Memory)
 
-set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -pthread")
+
+find_package (Threads)
 
 set(SOURCE_FILES main.cpp server.cpp Structures/LinkedList.h Structures/LinkedList.cpp Structures/Node.cpp Structures/Node.h Servers/Server.cpp Servers/Server.h rmlib/rmlib.cpp rmlib/rmlib.h)
 add_executable(Remote_Memory ${SOURCE_FILES})
